--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <header class="">
           <div class="">
             <!-- menu -->
-            <nav class="row navbar navbar-expand-lg bg-white">
+            <nav class="row navbar navbar-expand-sm bg-white">
               <div class="col">
                 <a class="navbar-brand ml-3 text-green" href="#"><span class="title font-weight-bold">Coomutranstur</span><br></a>
               </div>
