--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="col-sm-12 col-md-6 col-xl-6 text-center">
               <h3 class="text-white text-center">Empresa líder en el turismo a</h3>
               <span class="display-3 sancipriano text-white text-center d-md-none d-lg-block d-lg-none d-xl-block d-xl-none d-none d-sm-block">sancipriano</span>
-              <h1><span class="sancipriano text-white text-center d-block d-sm-none d-sm-block">sancipriano</span></h1>
+              <h1><span class="sancipriano text-white text-center d-block d-sm-none d-lg-none d-sm-block">sancipriano</span></h1>
               <button class="btn btn-lg mt-5 text-center btn-contacto">Contáctanos</button>
             </div>
           </div>
