--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                     <a class="nav-link" href="#nosotros">Guía turística</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#nosotros">Nosotros</a>
+                    <a class="nav-link" href="acerca.html">Nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#politica">Política de Calidad</a>
+                    <a class="nav-link" href="politica.html">Política de Calidad</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#ubicacion">Ubicación</a>
