--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <h3 class="text-white text-center">Empresa líder en el turismo a</h3>
               <span class="display-3 sancipriano text-white text-center d-md-none d-lg-block d-lg-none d-xl-block d-xl-none d-none d-sm-block">sancipriano</span>
               <h1><span class="sancipriano text-white text-center d-block d-sm-none d-lg-none d-sm-block">sancipriano</span></h1>
-              <button class="btn btn-lg mt-5 text-center btn-contacto">Contáctanos</button>
+              <a name="" id="" class="btn btn-lg mt-5 text-center btn-contacto" href="#footer" role="button">Contáctanos</a>
             </div>
           </div>
         </div>
