--- a/index.html
+++ b/index.html
@@ -124,7 +124,107 @@
   </section>
   <!-- FIN INDEX -->
 
+<!-- Ubicacion  -->
+<div class="container">
+    <div class="row pb-3 pt-3 align-items-center bg-light">
+        <div class="col-12 text-center" data-aos="zoom-in">
+            <h3>Contacto</h3>
+        </div>
+    </div>
 
+</div>
+<div class="container-fluid pl-0 pr-0 mb-5 mt-4">
+    <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3980.692860584939!2d-76.93038208467371!3d3.875888349334545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e373bfac0c11d7d%3A0xa41564121f3506cb!2sCooperativa+Multiactiva+de+Transportadores+Turisticos+de+Cordoba+y+San+Cipriano+-+COOMUTRANSTUR!5e0!3m2!1ses-419!2sco!4v1540246532405"
+        width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-lg-4">
+
+            <div class="row">
+                <div class="col-md-2">
+                    <i class="fas fa-phone-square fa-2x align-self-center mr-1"></i>
+                </div>
+                <div class="col">
+                    (57) 3148340811 <br>
+                    (57) 3148302152 <br>
+                    (57) 3155777327 <br>
+                    <span><small>Lunes a viernes de 8am-6pm</small></span>
+                </div>
+
+                <div class="w-100"></div>
+                <div class="col-md-2">
+                    <i class="fas fa-envelope fa-2x align-self-center mr-1"></i>
+                </div>
+                <div class="col">
+                    www.coomutranstur@hotmail.com
+                </div>
+            </div>
+
+        </div>
+        <div class="col-md-6 col-lg-8">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="well well-sm">
+                        <form class="form-horizontal" method="post">
+                            <fieldset>
+                                <legend class="text-center header">¿Tiene una pregunta?</legend>
+
+                                <div class="form-group">
+                                    <input required id="fname" name="name" type="text" placeholder="Nombre completo"
+                                        class="form-control">
+                                </div>
+
+                                <div class="form-group">
+                                    <input required id="email" name="email" type="text" placeholder="Correo electrónico"
+                                        class="form-control">
+                                </div>
+
+                                <div class="form-group">
+                                    <input id="phone" name="phone" type="text" placeholder="Teléfono" class="form-control">
+                                </div>
+
+                                <div class="form-group">
+                                    <textarea required class="form-control" id="message" name="message" placeholder="Introduzca su mensaje para nosotros, le responderemos via email lo más pronto posible."
+                                        rows="7"></textarea>
+                                </div>
+
+                                <div class="form-group">
+                                    <div class="text-center">
+                                        <button type="submit" class="btn btn-primary btn-lg">Enviar</button>
+                                    </div>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Footer  -->
+<section id="derechos" class="mt-4">
+    <div class="row">
+        <div class="col-12 text-center">
+            <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
+        </div>
+        <div class="col-6 d-flex align-items-center justify-content-end">
+            <p class="d-inline">
+                <em>NIT: 830.500.789-9</em>
+            </p>
+        </div>
+        <div class="col-6 d-flex align-items-center justify-content-start">
+            <span style="font-size: 2em;">
+                <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square"></i></a>
+            </span>
+        </div>
+
+    </div>
+
+</section>
 
 
 
