--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 </div>
 
 <!-- Footer  -->
-<section id="derechos" class="mt-4">
+<section id="footer" class="mt-4">
     <div class="row">
         <div class="col-12 text-center">
             <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
