--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
     </div>
     <div class="container">
       <div class="row">
+
+        <div class="col mb-3 text-center title font-weight-bold">
+          <p class="">Contáctenos</p>
+        </div>
+
+        <div class="w-100"></div>
         <div class="col-md-6 col-lg-4">
 
           <div class="row">
