--- a/alianzas.html
+++ b/alianzas.html
@@ -26,35 +26,64 @@
 </head>
 
 <body>
-  <section class="container-fluid bg-alainza">
-    <div class="bg-color">
-      <header>
-        <div class="container">
-          <nav class="row navbar navbar-expand-lg pb-1">
-            <a class="navbar-brand" href="index.html">Coomutranstur</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-              ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon">
-                <i class="fas fa-bars"></i>
-              </span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-              <ul class="navbar-nav mt-2 mt-lg-0 ml-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">Alianzas Estratégicas</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Contáctenos</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </div>
-      </header>
-    </div>
+  <!-- INDEX -->
+  <section class="container-fluid pl-0 pr-0" id="main">
+      <div class="bg-index">
+          <div class="bg-color">
+              <header class="">
+                  <div class="">
+                      <!-- menu -->
+                      <nav class="row navbar navbar-expand-sm bg-white">
+                          <div class="col">
+                              <a class="navbar-brand ml-3 text-green" href="#"><span class="title font-weight-bold">Coomutranstur</span><br></a>
+                          </div>
+                          <div class="col d-none d-md-inline-block">
+                              <ul class="navbar-nav mt-2 float-right">
+                                  <li class="nav-item">
+                                      <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
+                                  </li>
+                                  <li class="nav-item">
+                                      <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+                                  </li>
+                                  <li class="nav-item">
+                                      <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
+                                  </li>
+                              </ul>
+                          </div>
+                      </nav>
+                      <nav class="row navbar navbar-expand-lg bg-nav-menu">
+                          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+                              ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                              <span class="navbar-toggler-icon">
+                                  <i class="fas fa-bars"></i>
+                              </span>
+                          </button>
+                          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                              <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
+                                  <li class="nav-item active">
+                                      <a class="nav-link" href="#nosotros">Guía turística</a>
+                                  </li>
+                                  <li class="nav-item">
+                                      <a class="nav-link" href="acerca.html">Nosotros</a>
+                                  </li>
+                                  <li class="nav-item">
+                                      <a class="nav-link" href="politica.html">Política de Calidad</a>
+                                  </li>
+                                  <li class="nav-item">
+                                      <a class="nav-link" href="#ubicacion">Ubicación</a>
+                                  </li>
+                                  <li class="nav-item">
+                                      <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
+                                  </li>
+                                  <li class="nav-item">
+                                      <a class="nav-link" href="#contacto">Contáctenos</a>
+                                  </li>
+                              </ul>
+                          </div>
+                      </nav>
+                  </div>
+              </header>
+              <!-- texto main -->
   </section>
 
   <section>
