--- a/alianzas.html
+++ b/alianzas.html
@@ -27,9 +27,9 @@
 
 <body>
   <!-- INDEX -->
-  <section class="container-fluid pl-0 pr-0" id="main">
-      <div class="bg-index">
-          <div class="bg-color">
+  <section class="container-fluid pl-0 pr-0" id="">
+      <div class="">
+          <div class="">
               <header class="">
                   <div class="">
                       <!-- menu -->
@@ -68,9 +68,6 @@
                                   </li>
                                   <li class="nav-item">
                                       <a class="nav-link" href="politica.html">Política de Calidad</a>
-                                  </li>
-                                  <li class="nav-item">
-                                      <a class="nav-link" href="#ubicacion">Ubicación</a>
                                   </li>
                                   <li class="nav-item">
                                       <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
