--- a/politica.html
+++ b/politica.html
@@ -6,15 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="main.js"></script>
 </head>
 
 <body>
     <!-- INDEX -->
-    <section class="container-fluid pl-0 pr-0" id="main">
-        <div class="bg-index">
-            <div class="bg-color">
+    <section class="container-fluid pl-0 pr-0" id="">
+        <div class="">
+            <div class="">
                 <header class="">
                     <div class="">
                         <!-- menu -->
@@ -53,9 +55,6 @@
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="politica.html">Política de Calidad</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#ubicacion">Ubicación</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
