--- a/politica.html
+++ b/politica.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="main.js"></script>
+    <script src="js/jquery.min.js"></script>
 </head>
 
 <body>
@@ -101,6 +101,8 @@
             </div>
         </div>
     </section>
+
+    <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
