--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
         </div>
 
         <div class="w-100"></div>
-        <div class="col-md-6 col-lg-4">
+        <div class="col-md-6 col-lg-4 d-flex align-items-center">
 
-          <div class="row">
+          <div class="tarjeta row"> <!-- clase tajerta -->
             <div class="col-md-2">
               <i class="fas fa-phone-square fa-2x align-self-center mr-1"></i>
             </div>
@@ -159,7 +159,7 @@
 
         </div>
         <div class="col-md-6 col-lg-8">
-          <div class="row">
+          <div class="tarjeta row">
             <div class="col-md-12">
               <div class="well well-sm">
                 <form class="form-horizontal" method="post">
