--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <div class="row justify-content-center">
       <div class="flecha-abajo">
-        <a href="#nosotros"><i class="fa fa-angle-down"></i></a>
+        <a href="#footer"><i class="fa fa-angle-down"></i></a>
       </div>
     </div>
   </section>
