--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <div class="row">
 
         <div class="col mb-3 text-center title font-weight-bold">
-          <p class="">Contáctenos</p>
+          <p class="text-uppercase">Contáctenos</p>
         </div>
 
         <div class="w-100"></div>
