--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   </section>
   <!-- FIN INDEX -->
 
-  <!-- Ubicacion  -->
+  <!-- Contacto  -->
   <section id="contacto">
 
     </div>
@@ -196,6 +196,10 @@
         </div>
       </div>
     </div>
+  </section>
+
+  <section class="container">
+    <div class="fb-comments" data-href="https://fserver.github.io/" data-width="100%" data-numposts="5"></div>
   </section>
 
   <!-- Footer  -->
