--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
         <div class="w-100"></div>
         <div class="col-md-6 col-lg-4 d-flex align-items-center">
 
-          <div class="tarjeta row"> <!-- clase tajerta -->
+          <div class="tarjeta row">
+            <!-- clase tajerta -->
             <div class="col-md-2">
               <i class="fas fa-phone-square fa-2x align-self-center mr-1"></i>
             </div>
@@ -234,7 +235,7 @@
   <script src="js/wow.js"></script>
   <script src="js/scrollreveal.min.js"></script>
   <script src="js/aos.js"></script>
-
+  <script src="js/facebook.js"></script>
   <script src="js/app.js"></script>
 
 
