--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
               <span><small>Lunes a viernes de 8am-6pm</small></span>
             </div>
 
-            <div class="w-100"></div>
+            <div class="w-100">
+              <hr>
+            </div>
             <div class="col-md-2">
               <i class="fas fa-envelope fa-2x align-self-center mr-1"></i>
             </div>
