--- a/index.html
+++ b/index.html
@@ -9,23 +9,18 @@
   <meta property="fb:app_id" content="642215239509270" />
 
   <title>COOMUSTRANSTUR</title>
+
   <link rel="icon" type="image/png" href="img/logo.png" />
-
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-
   <link rel="stylesheet" href="css/style.css">
-
-  <!-- Pruebas -->
-
   <link rel="stylesheet" href="css/aos.css">
 
-  <!-- Pruebas -->
-
 </head>
+
 <!-- <div class="js"> -->
 
 <body>
+
   <div id="preloader"></div>
 
   <div id="fb-root"></div>
@@ -109,8 +104,6 @@
       </div>
     </div>
 
-
-
     <div class="row justify-content-center">
       <div class="flecha-abajo">
         <a href="#footer"><i class="fa fa-angle-down"></i></a>
@@ -118,6 +111,7 @@
     </div>
   </section>
   <!-- FIN INDEX -->
+
 
   <!-- Contacto  -->
   <section id="contacto">
@@ -201,9 +195,11 @@
     </div>
   </section>
 
+
   <section class="container">
     <div class="fb-comments" data-href="https://fserver.github.io/" data-width="100%" data-numposts="5"></div>
   </section>
+
 
   <!-- Footer  -->
   <section id="footer" class="mt-4">
@@ -229,7 +225,7 @@
   </section>
 
 
-
+<!-- Scripts -->
 
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
@@ -239,9 +235,6 @@
   <script src="js/aos.js"></script>
   <script src="js/facebook.js"></script>
   <script src="js/app.js"></script>
-
-
-
 
 </body>
 </div>
