--- a/alianzas.html
+++ b/alianzas.html
@@ -79,53 +79,43 @@
   </section>
 
   <section>
-    <div class="container-fluid" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
-
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-12 col-lg-6">
+
+        <div class="col-6">
           <!-- Div col -->
           <div class="alianza row align-items-center">
-            <div class="col-sm-3 text-center">
+            <div class="col text-center">
               <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="img-fluid rounded-circle" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
             </div>
-            <div class="col-sm-9">
-              <div class="row">
-                <div class="col-12">
-                  <div class="alianza-titulo">
-                    <h5 class="text-center">Restaurante y Hotel El Buen Gusto</h5>
-                    <hr>
-                  </div>
-                </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
 
-                <div class="col">
-                  Propietario: STELLA <br>
-                  Ubicación: San Cipriano
-                </div>
+              <h5>Restaurante y Hotel El Buen Gusto</h5>
 
-                <div class="col text-center d-flex align-items-center">
-                  <!-- <p>Servicios:</p> -->
-                  <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
-                  <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
-                  <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
-                </div>
+              <hr>
+              Propietario: STELLA <br>
+              Ubicación: San Cipriano
 
-                <div class="w-100">
-                  <hr>
-                </div>
-                <div class="col mt-1 mb-3 text-center">
-                  <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
-                    fotos</button>
-                  <a class="" href="#!">www.facebook.com/elbuengusto</a>
-                </div>
-              </div>
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+              
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/elbuengusto</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
             </div>
           </div>
+        </div>
+      </div> <!-- fin Div col -->
 
-        </div> <!-- fin Div col -->
 
-
-      </div> <!-- fin Div row -->
+    </div> <!-- fin Div row -->
 
 
     </div> <!-- fin container fluid -->
