--- a/alianzas.html
+++ b/alianzas.html
@@ -12,9 +12,6 @@
 
   <!-- Pruebas -->
 
-  <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
-  <link href="css/aos.css" rel="stylesheet">
-
   <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css" type="text/css" rel="stylesheet" />
   <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.css" type="text/css" rel="stylesheet" />
 
@@ -80,10 +77,10 @@
 
   <section>
     <div class="container-fluid">
-      <div class="row">
+      <div class="row justify-content-around">
 
-        <div class="col-6">
-          <!-- Div col -->
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-5 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
               <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
@@ -92,17 +89,20 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h5>Restaurante y Hotel El Buen Gusto</h5>
+              <h4>Restaurante y Hotel El Buen Gusto</h4>
+              <br>
 
-              <hr>
               Propietario: STELLA <br>
               Ubicación: San Cipriano
+
+              <br>
+              <br>
 
               <div class="w-100"></div>
               <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
               <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
               <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
-              
+
               <div class="w-100"></div>
               <a class="" href="#!">www.facebook.com/elbuengusto</a>
 
@@ -112,13 +112,177 @@
             </div>
           </div>
         </div>
-      </div> <!-- fin Div col -->
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-5 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Restaurante y Hotel El Buen Gusto</h4>
+              <br>
+
+              Propietario: STELLA <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/elbuengusto</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-5 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Restaurante y Hotel El Buen Gusto</h4>
+              <br>
+
+              Propietario: STELLA <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/elbuengusto</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-5 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Restaurante y Hotel El Buen Gusto</h4>
+              <br>
+
+              Propietario: STELLA <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/elbuengusto</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-5 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Restaurante y Hotel El Buen Gusto</h4>
+              <br>
+
+              Propietario: STELLA <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/elbuengusto</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-5 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Restaurante y Hotel El Buen Gusto</h4>
+              <br>
+
+              Propietario: STELLA <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/elbuengusto</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
 
 
-    </div> <!-- fin Div row -->
 
 
-    </div> <!-- fin container fluid -->
+      </div> <!-- fin Div row -->
+    </div> <!-- fin Div container -->
 
 
     <!-- Modal -->
@@ -133,22 +297,16 @@
             </button>
           </div>
           <div class="modal-body">
-
             <div class="row">
               <div class="col text-center">
-
                 <section data-featherlight-gallery data-featherlight-filter="a">
                   <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113552.jpg"><img class="img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113552.jpg"></a>
                   <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113655.jpg"><img class="img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113655.jpg"></a>
                   <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113720.jpg"><img class="img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113720.jpg"></a>
                   <a href="img/restaurante y hotel el buen gusto/IMG_20180916_114339.jpg"><img class="img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_114339.jpg"></a>
-
                 </section>
-
               </div>
             </div>
-
-
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -160,28 +318,29 @@
   </section>
 
 
+  <!-- Footer  -->
+  <section id="footer" class="mt-4">
+    <div class="row">
+      <div class="col-12 text-center">
+        <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
+      </div>
+      <div class="col-6 d-flex align-items-center justify-content-end">
+        <p class="d-inline">
+          <em>NIT: 830.500.789-9</em>
+        </p>
+      </div>
+      <div class="col-6 d-flex align-items-center justify-content-start">
+        <span style="font-size: 2em;">
+          <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square"></i></a>
+        </span>
+      </div>
+    </div>
+  </section>
 
 
-
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/holder.js"></script>
-  <script src="js/aos.js"></script>
-
-
-
-  <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
-
-  <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript"
-    charset="utf-8"></script>
-  <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.js" type="text/javascript"
-    charset="utf-8"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/detect_swipe/2.1.1/jquery.detect_swipe.min.js"></script>
-
-
-
-
-
+  <!-- SCRIPTS -->
   <script>
     AOS.init();
 
@@ -194,10 +353,16 @@
     });
   </script>
 
+  <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript"
+    charset="utf-8"></script>
+  <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.js" type="text/javascript"
+    charset="utf-8"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/detect_swipe/2.1.1/jquery.detect_swipe.min.js"></script>
 
-  <!-- SCRIPTS -->
-  <!-- <script src="js/scrollreveal.min.js"></script> -->
-  <!-- <script src="js/app.js"></script> -->
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/holder.js"></script>
+
 
 </body>
 
