--- a/politica.html
+++ b/politica.html
@@ -98,6 +98,29 @@
         </div>
     </section>
 
+
+    <!-- Footer  -->
+  <section id="footer" class="mt-4">
+    <div class="row">
+      <div class="col-12 text-center">
+        <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
+      </div>
+      <div class="col-6 d-flex align-items-center justify-content-end">
+        <p class="d-inline">
+          <em>NIT: 830.500.789-9</em>
+        </p>
+      </div>
+      <div class="col-6 d-flex align-items-center justify-content-start">
+        <span style="font-size: 2em;">
+          <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square"></i></a>
+        </span>
+      </div>
+    </div>
+  </section>
+  
+
     <script src="js/bootstrap.min.js"></script>
 </body>
 
